--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,129 @@
-name: ci
+name: 🧪 Continuous Integration
+
 on:
+  push:
+    branches: [main, develop, 'feature/**']
   pull_request:
-    branches: [ "main" ]
+    branches: [main, develop]
+
+env:
+  PYTHON_VERSION: '3.10'
+  NODE_VERSION: '18'
+
 jobs:
-  build:
+  backend-tests:
+    name: 🐍 Backend Tests
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
-      - run: pip install ruff pytest
-      - run: ruff check .
-      - run: pytest -q || true
+          python-version: ${{ env.PYTHON_VERSION }}
+          
+      - name: 📦 Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          
+      - name: 🔧 Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r src/backend/requirements.txt
+          pip install pytest pytest-cov flake8
+          
+      - name: 🧹 Lint code
+        run: flake8 src/backend --count --select=E9,F63,F7,F82 --show-source --statistics
+        
+      - name: 🧪 Run tests
+        run: |
+          cd src/backend
+          python -m pytest ../../tests/test_backend.py -v --cov=. --cov-report=xml
+          
+      - name: 📊 Upload coverage
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          flags: backend
+
+  frontend-tests:
+    name: 🌐 Frontend Tests  
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 🟢 Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: src/frontend/package-lock.json
+          
+      - name: 📦 Install dependencies
+        run: |
+          cd src/frontend
+          npm ci
+          
+      - name: 🧹 Lint code
+        run: |
+          cd src/frontend
+          npm run lint
+          
+      - name: 🏗️ Build application
+        run: |
+          cd src/frontend
+          npm run build
+          
+      - name: 🧪 Run tests
+        run: |
+          cd src/frontend
+          npm run test
+
+  security-scan:
+    name: 🔒 Security Scan
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 🔍 Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          
+      - name: 📊 Upload to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+  docker-build:
+    name: 🐳 Docker Build Test
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
+    
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 🐳 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: 🏗️ Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          push: false
+          tags: ai-agent-system:test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
