--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,11 @@
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Private keys and certificates
-*.pem
-*.key
-*.p12
-*.pfx
-
-# API keys and secrets
-config/secrets.json
-secrets/
-credentials/
-
-# Data files
-*.parquet
-*.csv
-*.json
-data/
-logs/
-
-# Python
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual environments
-venv/
-env/
-ENV/
-env.bak/
-venv.bak/
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS files
+*.pyc
+.env
+.venv/
+node_modules/
+*.tfstate
+*.tfstate.*
+.terraform/
+*.log
 .DS_Store
 Thumbs.db
